Allow multiple owner IDs

--- a/config-example.json
+++ b/config-example.json
@@ -1,5 +1,7 @@
 {
   "token": "qwe123rty456uiop7890asd321fgh654jkl0987",
   "prefix": "!",
-  "ownerID": "123451234512345"
+  "ownerID": [
+    123451234512345
+  ]
 }
