--- a/config-example.json
+++ b/config-example.json
@@ -1,6 +1,7 @@
 {
   "token": "qwe123rty456uiop7890asd321fgh654jkl0987",
-  "prefix": "!",
+  "commandPrefix": "!",
+  "aliasPrefix": "!",
   "color": 44608,
   "ownerID": [
     123451234512345
